--- a/play/.gitignore
+++ b/play/.gitignore
@@ -1,12 +1,18 @@
+# Logs
 logs
-*.log*
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 node_modules
 dist
-lib
 dist-ssr
 *.local
-docs/.vitepress/cache
 
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
