--- a/packages/hj-ui-plus/package.json
+++ b/packages/hj-ui-plus/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "rimraf ../../lib && vue-tsc --noEmit && vite build"
+    "build": "rimraf ../../dist && vue-tsc --noEmit && vite build"
   },
   "keywords": [],
   "author": "",
