--- a/docs/package.json
+++ b/docs/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build --build",
-    "serve": "vitepress serve"
+    "serve": "vitepress build && vitepress serve"
   },
   "keywords": [],
   "author": "",
