--- a/play/package.json
+++ b/play/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "unplugin-auto-import": "^0.17.2",
+    "unplugin-vue-components": "^0.26.0",
     "vue": "^3.3.8"
   },
   "devDependencies": {
